05-Hands-On-Capstone-Project/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudnative-lab
  labels:
    environment: learning
    tier: microservices
