05-Hands-On-Capstone-Project/k8s/01-kafka-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: cloudnative-lab
  labels:
    app: kafka
spec:
  clusterIP: None
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: cloudnative-lab
  labels:
    app: kafka
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: client
            - containerPort: 9093
              name: controller
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          readinessProbe:
            exec:
              command:
                - /opt/bitnami/kafka/bin/kafka-topics.sh
                - --bootstrap-server
                - 127.0.0.1:9092
                - --list
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
